// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserProfile Matches Snapshot (defaultOpen) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  height: 32px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  line-height: 1rem;
  min-height: 2rem;
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1:focus {
  outline: none;
}

.c1:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #00629666;
}

.c1:not(:disabled) {
  cursor: pointer;
}

.c1 > svg {
  color: inherit;
}

.c7 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.19);
  list-style-type: none;
  margin: 0;
  overflow-y: auto;
  padding: 0;
  position: absolute;
  width: 100%;
}

.c9 {
  color: #000000;
  display: block;
  font-size: 0.875rem;
  line-height: 2rem;
  overflow: hidden;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c9:focus {
  box-shadow: inset 0 0 0 3px #00629666,inset 0 0 0 1px #006296;
  outline: none;
}

.c9:hover {
  background-color: #DBDEE1;
}

.c0 {
  position: relative;
}

.c2 {
  background-color: #004E78;
  border-color: transparent;
  color: #FFFFFF;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  text-transform: unset;
}

.c2:hover {
  background-color: #004E78;
}

.c6 {
  margin-left: var(--spacing-1x);
}

.c8 {
  max-width: 350px;
  min-width: 200px;
  right: 0;
  width: initial;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #FAFAFA;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 1.5rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 1.5rem;
}

.c5 {
  color: #60666e;
  font-size: 0.625rem;
  -webkit-letter-spacing: 0.17px;
  -moz-letter-spacing: 0.17px;
  -ms-letter-spacing: 0.17px;
  letter-spacing: 0.17px;
}

.c4 {
  margin-right: var(--spacing-1x);
}

<nav
  aria-label="User menu"
  class="c0 "
>
  <button
    aria-expanded="true"
    class="c1 c2"
    data-testid="menu-button"
    type="button"
  >
    <div
      aria-label="Test Button avatar"
      class="c3 c4"
      role="img"
    >
      <span
        class="c5"
        data-testid="avatar-initials"
      >
        TB
      </span>
    </div>
    Test Button
    <svg
      aria-hidden="true"
      class="c6"
      color="currentColor"
      focusable="false"
      height="16"
      width="16"
    />
  </button>
  <ul
    class="c7 c8"
    data-testid="menu-list"
  >
    <li>
      <a
        class="c9"
        data-testid="listitem-optionA"
        href="/testa"
      >
        Option A
      </a>
    </li>
    <li>
      <a
        class="c9"
        data-testid="listitem-optionB"
        href="/testb"
      >
        Option B
      </a>
    </li>
    <li>
      <a
        class="c9"
        data-testid="listitem-optionC"
        href="/testc"
      >
        Option C
      </a>
    </li>
    <li>
      <a
        class="c9"
        data-testid="listitem-optionD"
        href="/testd"
      >
        Option D
      </a>
    </li>
  </ul>
</nav>
`;

exports[`UserProfile Matches Snapshot (desktop) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  height: 32px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  line-height: 1rem;
  min-height: 2rem;
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1:focus {
  outline: none;
}

.c1:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #00629666;
}

.c1:not(:disabled) {
  cursor: pointer;
}

.c1 > svg {
  color: inherit;
}

.c7 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.19);
  list-style-type: none;
  margin: 0;
  overflow-y: auto;
  padding: 0;
  position: absolute;
  width: 100%;
}

.c9 {
  color: #000000;
  display: block;
  font-size: 0.875rem;
  line-height: 2rem;
  overflow: hidden;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c9:focus {
  box-shadow: inset 0 0 0 3px #00629666,inset 0 0 0 1px #006296;
  outline: none;
}

.c9:hover {
  background-color: #DBDEE1;
}

.c0 {
  position: relative;
}

.c2 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  text-transform: unset;
}

.c2:hover {
  background-color: #004E78;
}

.c6 {
  margin-left: var(--spacing-1x);
}

.c8 {
  max-width: 350px;
  min-width: 200px;
  right: 0;
  width: initial;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #FAFAFA;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 1.5rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 1.5rem;
}

.c5 {
  color: #60666e;
  font-size: 0.625rem;
  -webkit-letter-spacing: 0.17px;
  -moz-letter-spacing: 0.17px;
  -ms-letter-spacing: 0.17px;
  letter-spacing: 0.17px;
}

.c4 {
  margin-right: var(--spacing-1x);
}

<nav
  aria-label="User menu"
  class="c0 "
>
  <button
    aria-expanded="false"
    class="c1 c2"
    data-testid="menu-button"
    type="button"
  >
    <div
      aria-label="Test Button avatar"
      class="c3 c4"
      role="img"
    >
      <span
        class="c5"
        data-testid="avatar-initials"
      >
        TB
      </span>
    </div>
    Test Button
    <svg
      aria-hidden="true"
      class="c6"
      color="currentColor"
      focusable="false"
      height="16"
      width="16"
    />
  </button>
  <ul
    class="c7 c8"
    data-testid="menu-list"
    hidden=""
  >
    <li>
      <a
        class="c9"
        data-testid="listitem-optionA"
        href="/testa"
      >
        Option A
      </a>
    </li>
    <li>
      <a
        class="c9"
        data-testid="listitem-optionB"
        href="/testb"
      >
        Option B
      </a>
    </li>
    <li>
      <a
        class="c9"
        data-testid="listitem-optionC"
        href="/testc"
      >
        Option C
      </a>
    </li>
    <li>
      <a
        class="c9"
        data-testid="listitem-optionD"
        href="/testd"
      >
        Option D
      </a>
    </li>
  </ul>
</nav>
`;

exports[`UserProfile Matches Snapshot (mobile) 1`] = `
.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: var(--font-bold);
  height: 48px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.53px;
  -moz-letter-spacing: 0.53px;
  -ms-letter-spacing: 0.53px;
  letter-spacing: 0.53px;
  line-height: 1.5rem;
  min-height: 2rem;
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-3x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2:focus {
  outline: none;
}

.c2:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #00629666;
}

.c2:not(:disabled) {
  cursor: pointer;
}

.c2 > svg {
  color: inherit;
}

.c7 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.19);
  list-style-type: none;
  margin: 0;
  overflow-y: auto;
  padding: 0;
  position: absolute;
  width: 100%;
}

.c9 {
  color: #000000;
  display: block;
  font-size: 1rem;
  line-height: 2.5rem;
  overflow: hidden;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c9:focus {
  box-shadow: inset 0 0 0 3px #00629666,inset 0 0 0 1px #006296;
  outline: none;
}

.c9:hover {
  background-color: #DBDEE1;
}

.c0 {
  position: relative;
}

.c3 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  text-transform: unset;
}

.c3:hover {
  background-color: #004E78;
}

.c8 {
  max-width: 350px;
  min-width: 200px;
  right: 0;
  width: initial;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #FAFAFA;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 2.5rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 2.5rem;
}

.c6 {
  color: #60666e;
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.23px;
  -moz-letter-spacing: 0.23px;
  -ms-letter-spacing: 0.23px;
  letter-spacing: 0.23px;
}

.c1 button {
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  padding: 0;
}

.c5 {
  margin-right: 0;
}

<nav
  aria-label="User menu"
  class="c0 c1"
>
  <button
    aria-expanded="false"
    class="c2 c3"
    data-testid="menu-button"
    type="button"
  >
    <div
      aria-label="Test Button avatar"
      class="c4 c5"
      role="img"
    >
      <span
        class="c6"
        data-testid="avatar-initials"
      >
        TB
      </span>
    </div>
  </button>
  <ul
    class="c7 c8"
    data-testid="menu-list"
    hidden=""
  >
    <li>
      <a
        class="c9"
        data-testid="listitem-optionA"
        href="/testa"
      >
        Option A
      </a>
    </li>
    <li>
      <a
        class="c9"
        data-testid="listitem-optionB"
        href="/testb"
      >
        Option B
      </a>
    </li>
    <li>
      <a
        class="c9"
        data-testid="listitem-optionC"
        href="/testc"
      >
        Option C
      </a>
    </li>
    <li>
      <a
        class="c9"
        data-testid="listitem-optionD"
        href="/testd"
      >
        Option D
      </a>
    </li>
  </ul>
</nav>
`;
